css fix - make seats more visible with new background, made auditorium bigger in size

--- a/BookingPage/css/newBookingMain.css
+++ b/BookingPage/css/newBookingMain.css
@@ -61,9 +61,9 @@
 
 .seat,
 .seatshow {
-  background-color: #444451;
-  height: 17px;
-  width: 20px;
+  background-color: #51515c;
+  height: 25px;
+  width: 28px;
   margin: 3px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -86,7 +86,7 @@
 
 .screen {
   background-color: #fff;
-  height: 70px;
+  height: 150px;
   width: 100%;
   margin: 15px 0;
   transform: rotateX(-45deg);
@@ -96,9 +96,10 @@
 .row {
   display: flex;
 }
-
+.platser {
+  font-size: 120%;
+}
 .showcase {
-  background-color: rgba(0, 0, 0, 0.1);
   padding: 5px 10px;
   margin: 2vh 0 2vh 0;
   border-radius: 5px;
